    mismatches based on schema names. [GSM] (Bug #17)

  - Add a --force option so we can remove databases via 'bucardo remove db'
    along with all related goats and syncs. [GSM]

  - Change bucardo.dbrun table column pgpid to INTEGER [Wim Lewis]

  - Remove race condition from bucardo_purge_q_table() [GSM]

  - Add new options for 'bucardo add db': addalltables and addallsequences [GSM]

  - Allow 'bucardo status' to run even if piddir is not available. [GSM]

  - Don't bother comparing the 'log_cnt' field of sequences. [Rosser Schwarz]

  - Allow "schema.table" format for 'bucardo list tables' [GSM]

  - Add new option "log_microsecond" to show sub-second output in logs. [GSM]

  - Make sure we update bucardo_config.bucardo_current_version when doing 
    a 'bucardo upgrade' [GSM] (Bug #5)

  - Automatically create the bucardo (superuser) if we can connect as 'postgres'. [GSM]

  - Add 'bucardo list all' feature [Christian Recktenwald]

  - Allow removal of tables from relgroups via bucardo. [GSM]

  - Add create_child_q_table() function. [GSM]

  - Allow 'bucardo update relgroup foo remove <table(s)>'
    and 'bucardo update relgroup foo add <table(s)>' [GSM]

  - Rename the default reason_file to bucardo.restart.reason.txt. The reason
    log is then named bucardo.restart.reason.log (instead of
    bucardo.restart.reason.log.log as before). [David Wheeler]

  - Better formatting of bucardo.reason.txt.log, and log startup failures. [GSM]

  - Log the current configuration settings on startup. [GSM]

  - Fix incorrect assignment of ppid in the bucardo.q table. [GSM]

  - Remove unused 'kick_sleep' config variable. [GSM]

  - Show the database name when listing relgroups via bucardo. [GSM]

  - Show the database name when listing sequences via bucardo. [Douglas Tan]

  - Show each target's Postgres version, time, and timezone on first connect. [GSM]

  - Change main trigger names to 'bucardo_delta' and 'bucardo_kick' [GSM]
